@@ -1,3 +1,6 @@
+2011-03-29  6.6.9-1 Cristy  <quetzlzacatenango@image...>
+  * Support -statistic standard-deviation option.
+
 2011-03-28  6.6.9-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.6.9-0.
 
